--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
@@ -46,7 +46,7 @@ ext {
     accompanistVersion = '0.23.0'
     activityComposeVersion = '1.4.0'
     androidXVersion = '1.0.0'
-    androidXTestCoreVersion = '1.4.0'
+    androidXTestCoreVersion = '1.4.1-alpha04'
     androidXTestExtKotlinRunnerVersion = '1.1.3'
     androidXTestRulesVersion = '1.2.0'
     androidXAnnotations = '1.3.0'
